--- a/index.html
+++ b/index.html
@@ -33,6 +33,32 @@
       <p>⚡ Fast & Clean UI</p>
     </div>
   </section>
+<section class="about">
+  <h2>Why Work With Me</h2>
+  <p>
+    I focus on clean design, fast loading websites, and mobile-first layouts.
+    I communicate clearly, deliver on time, and make sure your website looks
+    professional on all devices.
+  </p>
+</section>
+<section class="offer">
+  <h2>Simple & Affordable Websites</h2>
+  <p>
+    One-page websites, business sites, and portfolios —
+    perfect for individuals and small businesses.
+  </p>
+</section>
+<section class="trust">
+  <h2>Built With Care</h2>
+  <p>
+    Every website is designed with attention to detail,
+    clean code, and user experience in mind.
+  </p>
+</section><section class="cta">
+  <h2>Need a Website?</h2>
+  <p>Let’s build something clean, fast, and professional.</p>
+  <a href="#contact" class="btn">Contact Me</a>
+</section>
 
   <!-- CONTACT -->
   <section id="contact">
